<!--
  ~ Project:  Simple Collector
  ~ Purpose:  Mobile application for simple data collection.
  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
  ~ *****************************************************************************
  ~ Copyright (c) 2017-2018 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Simple Collector</string>
    <string name="app_description">Mobile application for simple data collection.</string>

    <string name="feedback">Feedback: info@nextgis.ru</string>
    <string name="copyright"
            translatable="false"><![CDATA[Copyright © <a href=\"http://nextgis.com\">NextGIS</a>, 2017-2018]]></string>
    <string name="version" translatable="false">v. %1$s (rev. %2$d)</string>

    <string name="action_about">About</string>
    <string name="action_data_sync">Data synchronization</string>

    <string name="permissions">Permissions</string>
    <string name="requested_permissions">Application needs some permissions to work properly. It includes writing to external storage (to save data on card),
        access to location services and getting contacts (to create and manage web accounts).</string>

    <string name="insufficient_permissions_to_use_app"><![CDATA[Your Web GIS doesn\'t exist or you\'re on free plan. Please <a href=\"https://my.nextgis.com/webgis/\">switch</a> to Premium or Mini to use this app. <a href=\"http://nextgis.com/contact/\">Contact us</a> if you think this is a mistake.]]></string>

    <string name="info_title">Information</string>
    <string name="interface_title">Interface</string>
    <string name="change_name">Change name</string>
    <string name="change_name_title">Change name?</string>
    <string name="change_name_message">All data will be deleted! Do you really want to continue?</string>
    <string name="change_name_message_not_sync">All data will be deleted, but they are not synchronized! Do you really want to continue?</string>
    <string name="reset_settings">Reset to defaults</string>
    <string name="reset_settings_title">Confirm?</string>
    <string name="reset_settings_message">All layers will be deleted! Only initial layers will be restored.</string>
    <string name="pref_ga">Collect statistics</string>
    <string name="pref_ga_sum">Send anonymous Google Analytics data to improve app quality and stability</string>
    <string name="current_connection">Current connection</string>

    <string name="right_left_on">Enable Right-Left</string>
    <string name="left_or_right">Left or Right</string>
    <string name="left">Left</string>
    <string name="right">Right</string>

    <string name="point_create_confirm">Confirmation of point creation</string>
    <string name="point_create_confirm_msg">Confirm of creation of point %s</string>

    <string name="enter_point_count">Enter count</string>
    <string name="enter_point_count_title">Enter count</string>

    <string name="without_track">Allow collecting without track</string>
    <string name="use_routes">Use routes</string>
    <string name="route">Route:</string>

    <string name="location">Location</string>
    <string name="pref_location_accuracy">Location accuracy</string>
    <string name="pref_location_accuracy_gps">GPS</string>
    <string name="pref_location_accuracy_cell">Other networks</string>
    <string name="pref_min_time">Minimum update time</string>
    <string name="pref_min_distance">Minimum update distance</string>
    <string name="accurate_measures_count">Count of GPS measures</string>
    <string name="frequentest">, as frequent as possible</string>
    <string name="track_restore">Restore current track after reboot</string>
    <string name="tracks_reload">Restart current track to apply changes</string>

    <string name="press_aback_again">Press back again to exit</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="track_rec_not_start"><b>Track collection is not enabled, first click Start!</b></string>

    <string name="snow_measure_msg"><b>Measure the snow depth</b></string>
    <string name="snow_measure_ask_msg"><b>Have you measured the snow depth?</b></string>

    <string name="account_name" translatable="false">@string/app_name</string>
    <string name="server_title">Simple Collector server</string>
    <string name="server_description"><![CDATA[Enter your <a href=\"http://nextgis.com\">nextgis.com</a> Web GIS address.]]></string>
    <string name="server_creation"><![CDATA[If you don\'t have one, please contact your administrator or visit <a href=\"https://my.nextgis.com/signup/?next=/webgis/\">nextgis.com</a> to create one.]]></string>
    <string name="login_title">Simple Collector account</string>
    <string name="login_description">Enter your Web GIS username and password.</string>
    <string name="url_hint">Server URL</string>
    <string name="edit_pass_description">Enter new password to connect to the system server</string>
    <string name="next">Next</string>

    <string name="first_run">First run</string>
    <string name="error_init">Failed to initialize</string>
    <string name="initialization">Initial setup</string>
    <string name="wait_data">Data loading, please wait.</string>
    <string name="operaton_canceled">Operation is canceled</string>
    <string name="done">Done</string>
    <string name="working">Working…</string>
    <string name="connecting">Connecting to server…</string>
    <string name="connected">Connected</string>
    <string name="error_unexpected">Unexpected error occurred</string>
    <string name="error_wrong_server">The incompatible server</string>
    <string name="check_root_resource_group">Check root resource group</string>
    <string name="root_resource_group_not_found">Root resource group is not found</string>
    <string name="root_resource_group_not_found_msg">The section for data collection was not found. Create?</string>
    <string name="error_resource_struct">Error resource struct</string>
    <string name="root_resource_group_found_with_error">The section for data collection is found, but contains errors in the structure. Contact the administrator to correct them to continue working.</string>
    <string name="create_root_resource_group">Create root resource group</string>
    <string name="error_create_root_resource">Create root resource error</string>
    <string name="create_data_struct">Create data struct</string>
    <string name="error_create_data_struct">Create data struct error</string>
    <string name="check_tables_exist">Check tables exist</string>

    <string name="step">Step: %d/%d</string>
    <string name="message">Message: %s</string>

    <string name="point_counters">Track: %d, objects: %d</string>

    <string name="sync_status">Sync status: %s</string>
    <string name="sync_status_data_synced">Data is synchronized</string>
    <string name="sync_status_data_not_synced">Data is not synchronized</string>
    <string name="sync_status_in_progress">Syncing in progress</string>

    <string name="gps_status">GPS status: %s</string>
    <string name="gps_status_off_please_on">disabled, please enable to start working</string>
    <string name="gps_status_location_getting">obtaining coordinates</string>
    <string name="gps_status_location_available">location is available</string>

    <string name="object_created">Objects created.</string>
    <string name="object_not_created_gps_getting">Objects is not created, obtaining coordinates.</string>

    <string name="empty_table_message"><b>Objects table is missing. Please contact your Web GIS administrator to add them. After that perform data synchronization.</b></string>
    <string name="name_selection">Name selection</string>
    <string name="please_select_your_name">Please select your name:</string>
    <string name="name">Name:</string>

    <string name="name_root_resource_group">Simple collector, data</string>

    <string name="data_layer">data</string>
    <string name="tracks_layer">tracks</string>
    <string name="routes_layer">routes</string>
    <string name="people_layer">people</string>
    <string name="objects_layer">objects</string>
</resources>
