<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project:  WTC Collector
  ~ Purpose:  Mobile application for WTC data collection.
  ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
  ~ *****************************************************************************
  ~ Copyright (c) 2017 NextGIS, info@nextgis.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/interface_title">
        <CheckBoxPreference
            android:key="use_routes"
            android:title="@string/use_routes"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:key="right_left"
            android:title="@string/right_left_on"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:key="enter_point_count"
            android:title="@string/enter_point_count"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:key="point_create_confirm"
            android:title="@string/point_create_confirm"
            android:defaultValue="true"
            />
        <Preference
            android:key="change_name"
            android:title="@string/change_name"
            />
        <Preference
            android:key="reset_settings"
            android:title="@string/reset_settings"
            />
        <CheckBoxPreference
            android:key="ga_enabled"
            android:summary="@string/pref_ga_sum"
            android:title="@string/pref_ga"
            android:defaultValue="true"
            />
    </PreferenceCategory>

</PreferenceScreen>
